add explain about algos and fixed typos

--- a/builders.tex
+++ b/builders.tex
@@ -908,7 +908,7 @@ impidiendo su progreso hacia soluciones mejores.
 
 \subsubsection{Pseudocódigo}
 
-En esta sección, presentamos un enfoque para la identificación de métodos generadores de objetos basado en un algoritmo de escalada. El pseudocódigo de este enfoque se muestra en la Figura~\ref{alg:hill_climbing}.
+En esta sección, presentamos un enfoque para la identificación de métodos generadores de objetos basado en un algoritmo de escalada. El pseudocódigo de este enfoque se muestra en la Figura~\ref{alg:enfoqueHC}.
 La representación que hemos utilizado del problema es la explicada en la sección \ref{sec:estados}. Esto quiere decir que utilizamos vectores de bits para representar los estados. 
 
 
